--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -81,6 +81,7 @@ body {
 	background-color: #fff;
 	-webkit-text-size-adjust: 100%;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	overflow: hidden;
 }
 
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
