--- a/client/src/components/personalHeader/personalHeader.scss
+++ b/client/src/components/personalHeader/personalHeader.scss
@@ -7,6 +7,7 @@
 	overflow: hidden;
 	padding: 4px 4px;
 	align-items: center;
+	z-index: 10;
 	.header__btn {
 		border-radius: 3px;
 		background-color: rgba(255, 255, 255, 0.3);
